# web-scraper-tool

./: CHANGELOG.md  README.md  webstool.cabal
app/: Main.hs
