cabal-version:      2.4
name:               webscrapertool
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A web scraping tool made in Haskell

-- A longer description of the package.
description: A minimal web scraping tool (Matches the name) written
             in Haskell

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Moldy

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable webs
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0,
                      HTTP,
                      request,
                      http-client,
                      http-client-tls,
                      http-types,
                      http-conduit,
                      http-streams,
                      http-reverse-proxy,
                      warp,
                      warp-tls,
                      tls,
                      text,
                      bytestring,
                      HsOpenSSL
                      
    hs-source-dirs:   app
    default-language: Haskell2010
